making changes to allow clicking of events vs clicking cells hosting the events

--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -50,6 +50,7 @@
 
 {% block scripts %}
     {{ super() }}
+    <script src="{{ url_for('static', filename = 'javascript/calendar/events.js')}}"></script>
     <script src="{{ url_for('static', filename = 'javascript/calendar/cells.js')}}"></script>
     <script src = "{{ url_for('static', filename = 'javascript/calendar/friendButton.js')}}"></script>
     <script src="{{ url_for('static', filename = 'javascript/navbar/highlight.js')}}"></script>
