--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -17,7 +17,7 @@
                             <h3 class="text-center text-light">
                                 Options
                             </h3>
-                            {% include 'calendar/friend-button.html' %}
+                            {% include 'calendar/friend_button.html' %}
                             {% include 'calendar/upload.html' %}
 
                         {% endblock side_content %}
