refactored to put duplicate code into functions

--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -17,6 +17,9 @@
 {%  endblock side_content %}
 {% block calendar %}
 <div class="container-fluid my-2">
+    {% block messages %}
+        {{ super() }}
+    {% endblock %}
     {% block arrowhead %}
         {{ super() }}
     {% endblock arrowhead %}
