--- a/flaskr/templates/calendar/upload.html
+++ b/flaskr/templates/calendar/upload.html
@@ -1,6 +1,6 @@
-<form class="sm-form" method="post" enctype="multipart/form-data">
+<form class="sm-form" method="post" enctype="multipart/form-data"  style="margin-top: 1em;">
     <div class="file-field">
-        <label class="m-1">Upload Schedule</label>
+        <label class="m-1 text-light">Upload Schedule</label>
         <input type="file" name="upload_schedule" class="form-control m-1 btn btn-info">
         <input type="submit" class="form-control btn btn-info m-1" name="upload" value="upload">
     </div>
