--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -10,9 +10,9 @@
     </title>
 {% endblock head %}
 {% block view %}
-    <h3 class="text-center mb-4">
+    <h2 class="text-center mb-4">
         Month
-    </h3>
+    </h2>
     <p class="text-center text-light">
         {{ pycal.month_name[month] }} {{ year }}
     </p>
@@ -56,7 +56,7 @@
       <div class="calendar-header">
             <div class="row header-title">
                 <div class="header-text my-3">
-                    <h1 id="date" class="text-center"> {{ pycal.month_name[month] }}, {{ year }}</h1>
+                    <h1 id="date" class="text-center"> {{ pycal.month_name[month] }} {{ year }}</h1>
                 </div>
             </div>
         </div>
