--- a/flaskr/templates/calendar/event_modal.html
+++ b/flaskr/templates/calendar/event_modal.html
@@ -51,6 +51,8 @@
                 <div class="modal-footer">
                     <button type="submit" name="event-save" value="save" class="btn btn-primary"
                             id="event-save">Save</button>
+                    <button type="submit" name="event-update" value="update" class="btn btn-primary hidden"
+                            id="event-update">Update</button>
                 </div>
             </form>
         </div>
