--- a/flaskr/templates/calendar/export.html
+++ b/flaskr/templates/calendar/export.html
@@ -1,12 +1,10 @@
-<form class="sm-form" method="post" enctype="multipart/form-data">
+<form class="sm-form" method="post" enctype="multipart/form-data" style="margin-top: 1em;">
     <div>
-        <label for="exports">Export file as:</label>
-        <select name="exports" id="exports" class="form-control">
+        <label for="exports" class="text-center m-1">Export file as:</label>
+        <select name="exports" id="exports" class="form-control m-1">
             <option value="csv">CSV</option>
             <option value="ics">ICS</option>
         </select>
-    </div>
-    <div>
         <input type="submit" name="export" value="export" class="form-control btn btn-info m-1">
     </div>
 </form>
