I fixed it Taylor, again

--- a/flaskr/templates/calendar/export.html
+++ b/flaskr/templates/calendar/export.html
@@ -1,6 +1,6 @@
 <form class="sm-form" method="post" enctype="multipart/form-data" style="margin-top: 1em;">
     <div>
-        <label for="exports" class="text-center m-1">Export file as:</label>
+        <label for="exports" class="text-center m-1 text-light">Export file as:</label>
         <select name="exports" id="exports" class="form-control m-1">
             <option value="csv">CSV</option>
             <option value="ics">ICS</option>
