--- a/flaskr/templates/base_cal.html
+++ b/flaskr/templates/base_cal.html
@@ -62,6 +62,7 @@
                 {% endblock datehead %}
                 {% block modals %}
                     {% include 'calendar/friend_modal.html' %}
+                    {% include 'calendar/event_dialog_modal.html' %}
                     {% include 'calendar/event_modal.html' %}
                 {% endblock modals %}
             {% endblock calendar %}
