--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -53,16 +53,17 @@
                         {% else %}
                             <td style = "width: 0.25em;" id = {{hour}}TimeCol> {{hour}}:00</td>
                         {% endif %}
-                        <td class = "cells" id = {{hour}}EventsCol data-bs-target="#event-modal" data-bs-toggle="modal">
+                        <td class = "cells" id = "cell-{{ day }}-{{ month }}-{{ year }}-{{ hour }}" data-target="#event-dialog-modal" data-toggle="modal">
                             {% for event in events %}
                                 {% if event[4] == hour and event[3] == day and
                                     event[2] == month and event[1] == year%}
+                                    <div>
                                     <div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
-                                    id="cell:{{ day }}-{{ month }}-{{ year }}-{{ hour }}">START: {{event[0]}}</div>
+                                    id="event-{{ day }}-{{ month }}-{{ year }}-{{ hour }}">START: {{event[0]}}</div></div>
                                 {% elif event[9] == hour and event[8] == day and
                                     event[7] == month and event[6] == year %}
-                                    <div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
-                                    id="cell:{{ day }}-{{ month }}-{{ year }}-{{ hour }}">END: {{event[0]}}</div>
+                                    <div><div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
+                                    id="event-{{ day }}-{{ month }}-{{ year }}-{{ hour }}">END: {{event[0]}}</div></div>
                                 {%endif%}
                             {% endfor %}
                         </td>
