teehee did some stuff quirky ecksdee

--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -9,7 +9,7 @@
 {%endblock head %}
 {% block view %}
     <h2 class="text-center mb-4">
-        Day
+        Day View
     </h2>
     {% block tinymonth %}
         {{ super() }}
