--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -5,7 +5,7 @@
     {{ super() }}
     <title>
         {%block title%}
-             Month
+             Month View
         {%endblock title%}
     </title>
 {% endblock head %}
