--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -4,7 +4,7 @@
     {{ super() }}
     <title>
         {%block title%}
-             Week
+             Week View
         {%endblock title%}
     </title>
 {% endblock head%}
