--- a/flaskr/templates/calendar/compare.html
+++ b/flaskr/templates/calendar/compare.html
@@ -1,11 +1,16 @@
-<form name = friend-comparison method="POST" style="margin-top: 1em;">
-    <label class = "text-light"> Compare Friends</label>
+<form class = sm-form name = friend-comparison method="POST" style="margin-top: 1em;">
+    <label class = "text-light m-1"> Compare Friends</label>
     {% for friend in friends%}
         <div>
-            <input type = checkbox id = "friend-check" name = "friend-check"  value = "{{ friend['username'] }}">
-            <label for = friend-check >{{ friend['username'] }}</label>
+            <input class = m-1 type = checkbox id = "friend-check" name = "friend-check"  value = "{{ friend['username'] }}">
+            <label for = friend-check>{{ friend['username'] }}</label>
         </div>
     {% endfor %}
+    <div>
+        <label for = compare-date class = "text-light m-1">Comparison Date</label>
+        <input type = date name="compare-date" class="form-control m-1" id="compare-date"
+                               placeholder="" required>
+    </div>
     <div class = text-center>
         <button class = "form-control btn btn-info m-1" type = submit name = compare-friends value = compare>Compare</button>
     </div>
