--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -3,7 +3,7 @@
     {{ super() }}
     <title>
         {%block title%}
-             Day
+             Day View
         {%endblock title%}
     </title>
 {%endblock head %}
