--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -11,7 +11,7 @@
 {% endblock head %}
 {% block view %}
     <h2 class="text-center mb-4">
-        Month
+        Month View
     </h2>
     {% block tinymonth %}
         {{ super() }}
