--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -10,7 +10,7 @@
 {% endblock head%}
 {% block view %}
     <h2 class="text-center mb-4">
-        Week
+        Week View
     </h2>
     {% block tinymonth %}
         {{ super() }}
