--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -3,13 +3,13 @@
     {{ super() }}
     <title>
         {%block title%}
-             Day
+             Day View
         {%endblock title%}
     </title>
 {%endblock head %}
 {% block view %}
     <h2 class="text-center mb-4">
-        Day
+        Day View
     </h2>
     {% block tinymonth %}
         {{ super() }}
