--- a/flaskr/templates/calendar/event_modal.html
+++ b/flaskr/templates/calendar/event_modal.html
@@ -49,9 +49,11 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" name="event-save" value="save" class="btn btn-primary"
+                    <button type="submit" name="event-button" value="save" class="btn btn-primary"
                             id="event-save">Save</button>
-                    <button type="submit" name="event-update" value="update" class="btn btn-primary hidden"
+                    <button type="submit" name="event-button" value="delete" class="btn btn-primary hidden"
+                            id="event-delete">Delete</button>
+                    <button type="submit" name="event-button" value="update" class="btn btn-primary hidden"
                             id="event-update">Update</button>
                 </div>
             </form>
