--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -5,13 +5,13 @@
     {{ super() }}
     <title>
         {%block title%}
-             Month
+             Month View
         {%endblock title%}
     </title>
 {% endblock head %}
 {% block view %}
     <h2 class="text-center mb-4">
-        Month
+        Month View
     </h2>
     {% block tinymonth %}
         {{ super() }}
