--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -4,13 +4,13 @@
     {{ super() }}
     <title>
         {%block title%}
-             Week
+             Week View
         {%endblock title%}
     </title>
 {% endblock head%}
 {% block view %}
     <h2 class="text-center mb-4">
-        Week
+        Week View
     </h2>
     {% block tinymonth %}
         {{ super() }}
