--- a/flaskr/templates/calendar/event_modal.html
+++ b/flaskr/templates/calendar/event_modal.html
@@ -40,7 +40,7 @@
                         <input type="time" name="end-time" class="form-control" id="event-end-time" required>
                     </div>
                     <div class="form-group">
-                        <select class="form-select" aria-label="Recurrence">
+                        <select class="form-select" name="recurrenc" id="event-recurrences" aria-label="Recurrence">
                           <option selected>Select Recurrence</option>
                           <option value="1">Daily</option>
                           <option value="2">Weekly</option>
