--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -50,13 +50,14 @@
                             {% endif %}
 
                             {% for date, day in week %}
-                                <td class="cells" id="day:{{ day }}-{{ hour }}" data-bs-target="#event-modal" data-bs-toggle="modal">
+                                <td class="cells" id ="cell-{{ day }}-{{ month }}-{{ year }}-{{ hour }}"
+                                    data-target="#event-dialog-modal" data-toggle="modal">
                                     {% for event in events %}
-                                        {% if (event[2] == month or event[7] == month) and (event[1] == year or event[6] == year) %}
+                                        {% if (event[2] == month or event[7] == month) and (event[1] == year
+                                            or event[6] == year) %}
                                             {% if event[3] == date and event[4] == hour %}
                                                 <div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
-                                                     data-bs-target="#event-modal" data-toggle="modal"
-                                                     id="cell:{{ date }}-{{ month }}-{{ year }}-{{ hour }}">
+                                                     id="event-{{ day }}-{{ month }}-{{ year }}-{{ hour }}">
                                                     {{ event[0] }}
                                                 </div>
                                             {% endif %}
