--- a/flaskr/templates/calendar/month.html
+++ b/flaskr/templates/calendar/month.html
@@ -49,7 +49,7 @@
                 <tr>
                     {% for cell in row %}
                         {% if cell != 0 %}
-                            <td class="cells text-center"
+                            <td class="cells text-center" data-target="#event-dialog-modal" data-toggle="modal"
                                 style="padding: 3em">
                                 {{ cell }}
                                 {% set event_counter = namespace(value=0) %}
@@ -62,13 +62,13 @@
                                 {% endfor %}
                                 {% if event_counter.value > 0 %}
                                 <div class=" small text-wrap bg-info bg-opacity-50 rounded-pill"
-                                     id="cell:{{ cell }}-{{ month }}">
+                                     id="event-{{ cell }}-{{ month }}">
                                     {{ event_counter.value }} event(s)
                                 </div>
                                 {% endif %}
                             </td>
                         {% else %}
-                            <td class="cells text-center" style="padding: 3em" id="cell:{{ cell }}-{{ month }}"></td>
+                            <td class="cells text-center" style="padding: 3em" id="event-{{ cell }}-{{ month }}"></td>
                         {% endif %}
                     {% endfor %}
                 </tr>
