working on cells and event_modal

--- a/flaskr/templates/calendar/event_modal.html
+++ b/flaskr/templates/calendar/event_modal.html
@@ -56,10 +56,10 @@
                     <button type="submit" name="event-button" value="update" class="btn btn-primary hidden"
                             id="event-update">Update</button>
                     <input class="hidden" name="old-title" id="old-title">
-                    <input class="hidden" name="old-start-time" id="old-start-time">
-                    <input class="hidden" name="old-end-time" id="old-end-time">
-                    <input class="hidden" name="old-start-date" id="old-start-date">
-                    <input class="hidden" name="old-end-date" id="old-end-date">
+                    <input type=time class="hidden" name="old-start-time" id="old-start-time">
+                    <input type=time class="hidden" name="old-end-time" id="old-end-time">
+                    <input type=date class="hidden" name="old-start-date" id="old-start-date">
+                    <input type=date class="hidden" name="old-end-date" id="old-end-date">
                 </div>
             </form>
         </div>
