--- a/flaskr/templates/calendar/day.html
+++ b/flaskr/templates/calendar/day.html
@@ -59,12 +59,17 @@
                                 {% if event[4] == hour and event[3] == day and
                                     event[2] == month and event[1] == year%}
                                     <div>
-                                    <div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
-                                    id="event-{{ day }}-{{ month }}-{{ year }}-{{ hour }}">START: {{event[0]}}</div></div>
+                                        <div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
+                                            id="{{ event[0] }},{{ event[1] }},{{ event[2] }},{{ event[3] }},{{ event[4] }},{{ event[5] }},{{ event[6] }},{{ event[7] }},{{ event[8] }},{{ event[9] }},{{ event[10] }},{{ event[11] }},{{ event[12] }}">
+                                        START: {{event[0]}}</div>
+                                    </div>
                                 {% elif event[9] == hour and event[8] == day and
                                     event[7] == month and event[6] == year %}
-                                    <div><div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
-                                    id="event-{{ day }}-{{ month }}-{{ year }}-{{ hour }}">END: {{event[0]}}</div></div>
+                                    <div>
+                                        <div class="events small text-wrap bg-info bg-opacity-50 rounded-pill"
+                                            id="{{ event[0] }},{{ event[1] }},{{ event[2] }},{{ event[3] }},{{ event[4] }},{{ event[5] }},{{ event[6] }},{{ event[7] }},{{ event[8] }},{{ event[9] }},{{ event[10] }},{{ event[11] }},{{ event[12] }}">
+                                        END: {{event[0]}}</div>
+                                    </div>
                                 {%endif%}
                             {% endfor %}
                         </td>
