--- a/flaskr/templates/calendar/week.html
+++ b/flaskr/templates/calendar/week.html
@@ -50,7 +50,7 @@
                             {% endif %}
 
                             {% for date, day in week %}
-                                <td class="cells" id ="cell-{{ day }}-{{ month }}-{{ year }}-{{ hour }}"
+                                <td class="cells" id ="cell-{{ date }}-{{ month }}-{{ year }}-{{ hour }}"
                                     data-target="#event-dialog-modal" data-toggle="modal">
                                     {% for event in events %}
                                         {% if (event[2] == month or event[7] == month) and (event[1] == year
